--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.4.2",
     "pinia": "^2.1.7",
-    "swiper": "^11.0.3",
     "vue": "^3.3.4",
-    "vue-awesome-swiper": "^5.0.1",
     "vue-router": "4"
   },
   "devDependencies": {
